Atualizado circulo para retornar

--- a/Moves/main.html
+++ b/Moves/main.html
@@ -14,7 +14,7 @@
         <button class="buttonStyle" onclick="stopLine(false)">Stop in line</button>
     </section>
     <section class="secline">
-        <div class="line" id="line">0</div>
+        <div id="line">0</div>
     </section>
     
     <hr>
@@ -25,11 +25,18 @@
     </section>
     <section class="secCircle">
         <div class="circleInternal"></div>
-        <div class="circle" id="circle">X:0 Y:0</div>
+        <div id="circle">X:0 Y:0</div>
     </section>
 
     <hr>
 
+    <section>
+        <button class="buttonStyle" onclick="startSquare(true)">Start in square</button>
+        <button class="buttonStyle" onclick="stopSquare(false)">Stop in esquare</button>
+    </section>
+    <section class="secSquare">
+        <div id="square">X:0 Y:0</div>
+    </section>
 
     <script src="library.js"></script>
 </body>
