--- a/Moves/main.html
+++ b/Moves/main.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <section>
-        <button class="buttonStyle" onclick="startLine(true)">Start in line</button>
-        <button class="buttonStyle" onclick="stopLine(false)">Stop in line</button>
+        <button class="buttonStyle" onclick="startLine(true)">Start line</button>
+        <button class="buttonStyle" onclick="stopLine(false)">Stop line</button>
     </section>
     <section class="secline">
         <div id="line">0</div>
@@ -20,8 +20,8 @@
     <hr>
 
     <section>
-        <button class="buttonStyle" onclick="startCircle(true)">Start in circle</button>
-        <button class="buttonStyle" onclick="stopCircle(false)">Stop in circle</button>
+        <button class="buttonStyle" onclick="startCircle(true)">Start circle</button>
+        <button class="buttonStyle" onclick="stopCircle(false)">Stop circle</button>
     </section>
     <section class="secCircle">
         <div class="circleInternal"></div>
@@ -31,8 +31,8 @@
     <hr>
 
     <section>
-        <button class="buttonStyle" onclick="startSquare(true)">Start in square</button>
-        <button class="buttonStyle" onclick="stopSquare(false)">Stop in esquare</button>
+        <button class="buttonStyle" onclick="startSquare(true)">Start square</button>
+        <button class="buttonStyle" onclick="stopSquare(false)">Stop esquare</button>
     </section>
     <section class="secSquare">
         <div id="square">X:0 Y:0</div>
