--- a/Moves/main.html
+++ b/Moves/main.html
@@ -67,6 +67,11 @@
         <div id="square"></div>
     </section>
 
+    <footer style="position: relative; padding-top: 30%; color:white">
+        <address> my address here</address>
+    </footer>
+
     <script src="library.js"></script>
+
 </body>
 </html>
