--- a/curriculo/curriculum.html
+++ b/curriculo/curriculum.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: #575757;">
     <div class="container">
         <div class="row">
             <div class="col-4 perfil">
@@ -17,12 +17,14 @@
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                 </svg>
             </div>
-            <!-- Início da div  -->
+            <!-- Início da div nome do perfil profissão atual -->
             <div class="col-8">
-                <h4>João Vitor Girardi</h4>
-                <p>Programador Delphi</p>
+                <Div class="nomePerfil">
+                    <h4>João Vitor Girardi</h4>
+                    <p>Programador Delphi</p>
+                </Div>
             </div>
-
+             <!-- Fim da div nome do perfil profissão atual -->
             
             <div class="col-4">
                 <div class="contatos"> <!-- Início da div dos contatos -->
@@ -78,40 +80,50 @@
 
                 <div>
                     <div class="mb-3 mt-5">
-                        <h4 class="fs-6 titulosH4">HABILIDADES</h4> 
+                        <h4 class="fs-6 titulosH4">
+                            HABILIDADES
+                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                            </svg>
+                        </h4> 
                     </div>
 
-                    <div>
-                        <h5>DELPHI</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="conhecimento">
+                        <h5>DELPHI</h5>   
+                        <div style="width: 100%; background-color: rgb(160, 160, 160); box-shadow: none;">
+                            <div style="width: 95%;"></div>
                         </div>
                         <h5>HTML</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div style="width: 100%; background-color: rgb(160, 160, 160); box-shadow: none;">
+                            <div style="width: 60%;"></div>
                         </div>
                         <h5>CSS</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div style="width: 100%; background-color: rgb(160, 160, 160); box-shadow: none;">
+                            <div style="width: 60%;"></div>
                         </div>
                         <h5>JAVA SCRIPT</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div style="width: 100%; background-color: rgb(160, 160, 160); box-shadow: none;">
+                            <div style="width: 35%;"></div>
                         </div>
                         <h5>PHP</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div style="width: 100%; background-color: rgb(160, 160, 160); box-shadow: none;">
+                            <div style="width: 30%;"></div>
                         </div>
                         <h5>PYTHON</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div style="width: 100%; background-color: rgb(160, 160, 160); box-shadow: none;">
+                            <div style="width: 35%;"></div>
                         </div>
                     </div>
                 </div>
 
             </div>
 
-            <div class="col-8">Experiencia | educação
+            <div class="col-8">
+                <div class="card Resumo">
+                    <div class="card-body">
+                        Experiencia | educação
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
