--- a/curriculo/curriculum.html
+++ b/curriculo/curriculum.html
@@ -81,39 +81,143 @@
 
                 <div>
                     <div class="mb-3 mt-5">
-                        <h4 class="fs-6 titulosH4">
-                            HABILIDADES
-                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
-                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-                            </svg>
-                        </h4> 
+                        <h4 class="fs-6 titulosH4">HABILIDADES</h4> 
                     </div>
 
                     <div class="conhecimento">
-                        <h5>DELPHI</h5>   
-                        <div class="baseconhecimento">
-                            <div style="width: 95%;"></div>
-                        </div>
-                        <h5>HTML</h5>
-                        <div class="baseconhecimento">
-                            <div style="width: 60%;"></div>
-                        </div>
-                        <h5>CSS</h5>
-                        <div class="baseconhecimento">
-                            <div style="width: 60%;"></div>
-                        </div>
-                        <h5>JAVA SCRIPT</h5>
-                        <div class="baseconhecimento">
-                            <div style="width: 35%;"></div>
-                        </div>
-                        <h5>PHP</h5>
-                        <div class="baseconhecimento">
-                            <div style="width: 30%;"></div>
-                        </div>
-                        <h5>PYTHON</h5>
-                        <div class="baseconhecimento">
-                            <div style="width: 35%;"></div>
-                        </div>
+
+                        <ol>
+                            <li style="display: block;">
+                                <h5>DELPHI</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info">
+                                            <span class="info__title">Conhecimento sólido<br></span>
+                                             Adquirido com dois anos trabalhando diretamente com a linguagem.
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 95%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>HTML</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info">
+                                            <span class="info__title">Conhecimento intemediário<br></span>
+                                            Proporcionado por meio de aulas da faculdade e estudo independente.
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 50%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>CSS</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info">
+                                            <span class="info__title">Conhecimento intemediário<br></span>
+                                            Proporcionado por meio de aulas da faculdade e estudo independente.
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 50%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>JAVA SCRIPT</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info">
+                                            <span class="info__title">Conhecimento básico<br></span>
+                                            Leve conhecimento adquirido por meio de aulas e estudos autodidata.
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 37%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>PHP</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info">
+                                            <span class="info__title">Conhecimento básico<br></span>
+                                            Leve conhecimento adquirido por meio de aulas e estudos autodidata.
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 25%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>PYTHON</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info">
+                                            <span class="info__title">Conhecimento básico<br></span>
+                                            Leve conhecimento adquirido por meio de aulas, estudos autodidata e curso.
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 40%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>POSTGRESQL</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info">
+                                            <span class="info__title">Conhecimento médio-avançado<br></span>
+                                            Obtido por trabalhar com POSTGRESQL a dois anos e aulas da faculdade.</span>
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 70%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>SQL SERVER</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info__title">Conhecimento básico<br></span>
+                                        Leve conhecimento por uso no trabalho.
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 35%;"></div>
+                                </div>
+                            </li>
+                            <li style="display: block;">
+                                <h5>MYSQL</h5> 
+                                <div class="tool-tip">
+                                    <i class="tool-tip__icon">i</i>
+                                    <p class="tool-tip__info">
+                                        <span class="info__title">Conhecimento básico<br></span>
+                                        Leve conhecimento por uso no trabalho.
+                                    </p>
+                                </div>
+                                <div class="baseconhecimento">
+                                    <div class="porcentagem" style="width: 35%;"></div>
+                                </div>
+                            </li>
+                        </ol>
                     </div>
                 </div>
 
