--- a/curriculo/curriculum.html
+++ b/curriculo/curriculum.html
@@ -21,8 +21,32 @@
             <div class="col-8">
                 <Div class="nomePerfil">
                     <h4>João Vitor Girardi</h4>
-                    <p>programador delphi</p>
-                    <a href="#">sobre</a>
+                    <p>Programador Delphi</p>
+                    <a data-bs-toggle="modal" data-bs-target="#eModal">Sobre</a>
+                      <!-- Modal -->
+                      <div class="modal fade" id="eModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="ModalLabel">Sobre mim...</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Trabalho atualmente como programador DELPHI na empresa IPM Sistemas desde fevereiro de 2021.
+                                Iníciei na empresa através de um curso fornecido pela empresa "Jovens talentos".
+                                Antes disso fui mecânico industrial por três anos.
+                                Enquanto cursava o ensino médio fiz curso de Eletricista e Mecatrônica no SENAI, quando mais novo fiz curso de manutenção de micro.
+                                Onde tudo mudou? quando eu não me via mais na área de manutenção, então veio em mente o curso de mecatrônica onde é usada 
+                                programação para automatizar os nossos projetos, e foi aí que tive a ideia 
+                                de mudar de carreira, e daquele dia em diante as coisas mudaram, em seguida já entrei em uma faculdade de TI, 
+                                e hoje não me vejo trabalhando em outra área.
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Sair</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                 </Div>
             </div>
              <!-- Fim da div nome do perfil profissão atual -->
