--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -12,41 +12,16 @@
     <div class="container">
         <div class="row">
             <div class="col-4 perfil">
-                <svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                </svg>
+                <div class="perfil-img">
+                    <img src="imagem/fotoPerfil.jpg" alt="foto de Perfil">
+                </div>
             </div>
             <!-- Início da div nome do perfil profissão atual -->
             <div class="col-8">
                 <Div class="nomePerfil">
                     <h4>João Vitor Girardi</h4>
                     <p>Programador Delphi</p>
-                    <a data-bs-toggle="modal" data-bs-target="#eModal">Sobre</a>
-                      <!-- Modal -->
-                      <div class="modal fade" id="eModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="ModalLabel">Sobre mim...</h5>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Trabalho atualmente como programador DELPHI na empresa IPM Sistemas desde fevereiro de 2021.
-                                Iníciei na empresa através de um curso fornecido pela empresa "Jovens talentos".
-                                Antes disso fui mecânico industrial por três anos.
-                                Enquanto cursava o ensino médio fiz curso de Eletricista e Mecatrônica no SENAI, quando mais novo fiz curso de manutenção de micro.
-                                Onde tudo mudou? quando eu não me via mais na área de manutenção, então veio em mente o curso de mecatrônica onde é usada 
-                                programação para automatizar os nossos projetos, e foi aí que tive a ideia 
-                                de mudar de carreira, e daquele dia em diante as coisas mudaram, em seguida já entrei em uma faculdade de TI, 
-                                e hoje não me vejo trabalhando em outra área.
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Sair</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+                  
                 </Div>
             </div>
              <!-- Fim da div nome do perfil profissão atual -->
@@ -71,7 +46,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                             </svg>
-                            <a href="#">Github</a> 
+                            <a href="https://github.com/JoaoVitorGirardii" target="_blank" rel="noreferrer noopener">Github</a> 
                         </div>
                     </div>
 
@@ -80,7 +55,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
                                 <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                             </svg>
-                            <a href="#">91234-5678</a> 
+                            <a href="https://wa.me/554792279191?text=Vi%20seu%20perfil%20gostaria%20de%20fazer%20uma%20proposta%20de%20trabalho:">WhatsApp</a> 
                         </div>
                     </div>
 
@@ -250,21 +225,27 @@
             <div class="col-8">
                 <div>
                     <div class="card-body Resumo">
-                        <h4 class="titulosH4">Resumo sobre mim</h4>
+                        <h4 class="fs-6 titulosH4">RESUMO SOBRE MIM</h4>
                         <ul>
-                            <li class="lista">An item</li>
-                            <li class="lista">A second item</li>
-                            <li class="lista">A third item</li>
-                            <li class="lista">A fourth item</li>
-                            <li class="lista">And a fifth one</li>
+                            <li class="lista">
+                                <p>
+                                    Trabalho atualmente como programador DELPHI na empresa IPM Sistemas desde fevereiro de 2021.
+                                    Iníciei na empresa através de um curso fornecido pela empresa "Jovens talentos".
+                                    Antes disso fui mecânico industrial por três anos.
+                                    Enquanto cursava o ensino médio fiz curso de Eletricista e Mecatrônica no SENAI, quando mais novo fiz curso de manutenção de micro.
+                                </p>   
+                                <p>
+                                    Onde tudo mudou? quando eu não me via mais na área de manutenção, então veio em mente o curso de mecatrônica onde é usada 
+                                    programação para automatizar os nossos projetos, e foi aí que tive a ideia 
+                                    de mudar de carreira, e daquele dia em diante as coisas mudaram, em seguida já entrei em uma faculdade de TI, 
+                                    e hoje não me vejo trabalhando em outra área.
+                                </p>
+                            </li>
                           </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid bg-success">
-        <p>FIM</p>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
